<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">蓝牙电话</string>
    <string name="tab_call">通话</string>
    <string name="tab_contacts">联系人</string>
    <string name="default_device_name">iPhone X</string>
    <string name="bt_icon_desc">蓝牙连接图标</string>
    <string name="tab_indicator_desc">Tab 选中指示线</string>

    <!-- Dialer fragment -->
    <string name="dialer_call_history_title">通话记录</string>
    <string name="dialer_number_hint">输入号码</string>
    <string name="dialer_no_match">未匹配到相关联系人</string>
    <string name="dialer_btn_1">1</string>
    <string name="dialer_btn_2">2</string>
    <string name="dialer_btn_3">3</string>
    <string name="dialer_btn_4">4</string>
    <string name="dialer_btn_5">5</string>
    <string name="dialer_btn_6">6</string>
    <string name="dialer_btn_7">7</string>
    <string name="dialer_btn_8">8</string>
    <string name="dialer_btn_9">9</string>
    <string name="dialer_btn_0">0</string>
    <string name="dialer_btn_star">*</string>
    <string name="dialer_btn_hash">#</string>
    <string name="dialer_btn_call_desc">拨打电话</string>
    <string name="dialer_btn_del_desc">删除</string>
    <string name="call_type_missed_desc">未接来电</string>
    <string name="call_type_incoming_desc">已接来电</string>
    <string name="call_type_outgoing_desc">呼出</string>
    <string name="call_type_generic_desc">通话</string>

    <!-- Incoming call -->
    <string name="incoming_call_status">来电中</string>
    <string name="incoming_call_status_mini">来电</string>
    <string name="incoming_call_answer">接听</string>
    <string name="incoming_call_hangup">挂断</string>
    <string name="incoming_call_minimize_desc">缩小窗口</string>
    <string name="incoming_call_answer_desc">接听按钮</string>
    <string name="incoming_call_hangup_desc">挂断按钮</string>
    <string name="incoming_call_mini_bg_desc">来电小窗背景</string>
    <string name="incoming_call_mock_name">火龙果</string>
    <string name="incoming_call_mock_number">136 3890 0900</string>

    <!-- Outgoing call -->
    <string name="outgoing_call_dialing">正在拨号</string>
    <string name="outgoing_call_hang_up">挂断</string>
    <string name="outgoing_call_mute">静音</string>
    <string name="outgoing_call_switch_phone">切换至手机</string>
    <string name="outgoing_call_keyboard">数字键盘</string>
    <string name="outgoing_call_minimize_desc">缩小按钮</string>
    <string name="outgoing_call_keyboard_btn_desc">数字键盘按钮</string>
    <string name="outgoing_call_hang_up_btn_desc">挂断按钮</string>
    <string name="outgoing_call_mute_btn_desc">静音按钮</string>
    <string name="outgoing_call_switch_btn_desc">切换至手机按钮</string>
    <string name="outgoing_call_mini_bg_desc">拨号小窗背景</string>
    <string name="outgoing_call_mock_number">138 2221 2212</string>
    <string name="outgoing_call_mock_location">广东省广州市</string>

    <!-- In-call module -->
    <string name="in_call_hang_up">挂断</string>
    <string name="in_call_mute">解除静音</string>
    <string name="in_call_unmute">静音</string>
    <string name="in_call_switch_phone">切换至手机</string>
    <string name="in_call_keyboard">数字键盘</string>
    <string name="in_call_minimize_desc">缩小按钮</string>
    <string name="in_call_hang_up_btn_desc">挂断按钮</string>
    <string name="in_call_mute_btn_desc">静音按钮</string>
    <string name="in_call_switch_btn_desc">切换至手机按钮</string>
    <string name="in_call_keyboard_btn_desc">数字键盘按钮</string>
    <string name="in_call_mini_bg_desc">通话小窗背景</string>
    <string name="in_call_mini_hang_up_desc">小窗挂断按钮</string>
    <string name="in_call_mini_mute_desc">小窗静音按钮</string>
    <string name="in_call_status_bar_bg_desc">顶栏通话状态背景</string>
    <string name="in_call_status_bar_icon_desc">顶栏电话图标</string>
    <string name="in_call_dtmf_display_desc">DTMF 输入显示</string>
    <string name="in_call_mock_number">138 2221 2212</string>
    <string name="in_call_mock_time">00:30</string>
    <string name="in_call_switch_dialog_title">切换至车内将关闭\u201C隐私通话\u201D</string>
    <string name="in_call_switch_dialog_message">请确认是否切换？</string>
    <string name="in_call_switch_dialog_cancel">取消</string>
    <string name="in_call_switch_dialog_confirm">切换</string>

    <!-- Contacts module -->
    <string name="contacts_letter_index_desc">字母索引栏</string>
    <string name="contacts_avatar_desc">联系人头像</string>
    <string name="contacts_empty_hint">暂无联系人</string>

    <!-- Contact detail dialog -->
    <string name="contact_detail_phone_section">电话</string>
    <string name="contact_detail_avatar_desc">联系人大头像</string>
    <string name="contact_detail_call_icon_desc">拨打电话</string>

    <!-- Empty state -->
    <string name="empty_no_call_records">没有通话记录</string>
    <string name="empty_no_contacts">没有联系人</string>
    <string name="empty_hint_line1">需确保所连接设备的蓝牙设置中，允许同步</string>
    <string name="empty_hint_line2">联系人和通话记录。</string>
    <string name="empty_learn_more">了解更多</string>
    <string name="empty_sync_button">同步</string>
    <string name="empty_icon_desc">空状态图标</string>

    <!-- Loading state -->
    <string name="loading_syncing">正在同步…</string>
    <string name="loading_icon_desc">加载中图标</string>

    <!-- Bluetooth disconnected -->
    <string name="bt_disconnected_add_device">添加蓝牙设备</string>
    <string name="bt_disconnected_card_desc">蓝牙未连接卡片</string>
    <string name="bt_disconnected_add_icon_desc">添加图标</string>
    <string name="bt_disconnected_device_icon_desc">设备图标</string>

    <!-- Call Center -->
    <string name="call_center_title">I-call</string>
    <string name="call_center_phone">000-0000-000</string>
    <string name="call_center_desc_line1">如前往陌生路段时，按下拨号键可连接至呼叫中心的人工</string>
    <string name="call_center_desc_line2">坐席进行目的地查询与导航，所有费用需用户自理。</string>
    <string name="call_center_calling_title">呼叫中心</string>
    <string name="call_center_unmute">解除静音</string>
    <string name="call_center_call_btn_desc">拨打按钮</string>
    <string name="call_center_mute_btn_desc">静音按钮</string>

    <!-- I-Call Service -->
    <string name="icall_service_title">客服中心</string>
    <string name="icall_service_phone">010-8784-8405</string>
    <string name="icall_service_desc">如您有用车问题需要咨询，按下拨号键可呼叫客服中心。</string>
    <string name="icall_mini_bg_desc">I-Call 小窗背景</string>

    <!-- E-Call Service -->
    <string name="ecall_service_title">服务中心</string>
    <string name="ecall_mini_bg_desc">E-Call 小窗背景</string>

    <!-- Shared service call strings -->
    <string name="service_call_dialing">正在拨号\u2026</string>
    <string name="service_call_hangup">挂断</string>
    <string name="service_call_hangup_btn_desc">挂断按钮</string>
    <string name="service_call_minimize_desc">缩小按钮</string>
    <string name="service_call_default_timer">00:00</string>

    <!-- Third-party call -->
    <string name="tp_incoming_status">来电中</string>
    <string name="tp_incoming_status_mini">来电</string>
    <string name="tp_call_hold">保持</string>
    <string name="tp_answer">接听</string>
    <string name="tp_hang_up">挂断</string>
    <string name="tp_switch_phone">切换至手机</string>
    <string name="tp_unmute">解除静音</string>
    <string name="tp_mute">静音</string>
    <string name="tp_switch_call">交换</string>
    <string name="tp_keyboard">数字键盘</string>
    <string name="tp_minimize_desc">缩小按钮</string>
    <string name="tp_answer_btn_desc">接听按钮</string>
    <string name="tp_hangup_btn_desc">挂断按钮</string>
    <string name="tp_hang_up_current_desc">挂断当前通话按钮</string>
    <string name="tp_divider_desc">通话分隔线</string>
    <string name="tp_mini_bg_desc">第三方通话小窗背景</string>
    <string name="tp_mini_line_desc">小窗分隔线</string>
    <string name="tp_switch_btn_desc">切换至手机按钮</string>
    <string name="tp_mute_btn_desc">静音按钮</string>
    <string name="tp_cut_btn_desc">交换按钮</string>
    <string name="tp_keyboard_btn_desc">数字键盘按钮</string>
    <string name="tp_mock_current_name">火龙果</string>
    <string name="tp_mock_current_number">10086</string>
    <string name="tp_mock_current_time">00:30</string>
    <string name="tp_mock_incoming_name">中国移动</string>
    <string name="tp_mock_incoming_number">10086</string>
    <string name="tp_mock_active_name">火龙果</string>
    <string name="tp_mock_active_time">00:02</string>
    <string name="tp_mock_active_number">138 2221 2212</string>

    <!-- Sync dialog -->
    <string name="sync_dialog_title">同步操作</string>
    <string name="sync_steps_label">步骤如下：</string>
    <string name="sync_step_1">1、完成手机与车辆蓝牙的配对连接。</string>
    <string name="sync_step_2">2、开启\u201C同步联系人与通话记录\u201D开关。</string>
    <string name="sync_step_3">3、在手机上同意并开启车辆的联系人访问权限。</string>
    <string name="sync_auth_hint">（若手机尚未弹出授权请求，需前往相关页面授予权限）</string>
    <string name="sync_brand_intro">不同品牌手机的蓝牙联系人，授权路径不尽相同。</string>
    <string name="sync_disclaimer_line1">若按上述路径，找不到同步联系人的授权功能，请取消</string>
    <string name="sync_disclaimer_line2">配对蓝牙设备，再重新连接。</string>
    <string name="sync_brand_huawei">华为</string>
    <string name="sync_brand_apple">苹果</string>
    <string name="sync_brand_other">其他</string>
    <string name="sync_huawei_detail">如 mate 40 pro：在蓝牙设置页面的\u201C已配对的设备\u201D中，依次点击车辆设备右侧的\u201C设置\u201D图标>\u201C共享联系人\u201D，选择\u201C仅姓名和号码\u201D或\u201C全部详情\u201D。</string>
    <string name="sync_apple_detail">如iPhone 12 pro：在蓝牙设置页面的\u201C已配对的设备\u201D中，点击车辆设备右侧的\u201C详情\u201D图标，开启\u201C同步通讯录\u201D开关。</string>
    <string name="sync_other_detail">在手机的蓝牙设备页面，找到已连接的车辆设备，进入\u201C详情\u201D页面，允许同步联系人。</string>
    <string name="sync_unfold_desc">展开详情</string>
    <string name="sync_packup_desc">收起详情</string>
</resources>
