<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- DTMF input display: app(376, 74), 528 wide, 48px, blue -->
    <TextView
        android:id="@+id/tv_dtmf_display"
        android:layout_width="@dimen/in_call_dtmf_display_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/in_call_dtmf_display_text_size"
        android:textColor="@color/day_primary_blue"
        android:gravity="center"
        android:contentDescription="@string/in_call_dtmf_display_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/in_call_dtmf_grid_start"
        android:layout_marginTop="@dimen/in_call_dtmf_display_top" />

    <!-- Row 1: 1, 2, 3 -->
    <TextView
        android:id="@+id/btn_dtmf_1"
        style="@style/DtmfKey"
        android:text="@string/dialer_btn_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/in_call_dtmf_grid_start"
        android:layout_marginTop="@dimen/in_call_dtmf_grid_top" />

    <TextView
        android:id="@+id/btn_dtmf_2"
        style="@style/DtmfKey"
        android:text="@string/dialer_btn_2"
        app:layout_constraintStart_toEndOf="@id/btn_dtmf_1"
        app:layout_constraintTop_toTopOf="@id/btn_dtmf_1"
        android:layout_marginStart="@dimen/in_call_dtmf_key_gap" />

    <TextView
        android:id="@+id/btn_dtmf_3"
        style="@style/DtmfKey"
        android:text="@string/dialer_btn_3"
        app:layout_constraintStart_toEndOf="@id/btn_dtmf_2"
        app:layout_constraintTop_toTopOf="@id/btn_dtmf_1"
        android:layout_marginStart="@dimen/in_call_dtmf_key_gap" />

    <!-- Row 2: 4, 5, 6 -->
    <TextView
        android:id="@+id/btn_dtmf_4"
        style="@style/DtmfKey"
        android:text="@string/dialer_btn_4"
        app:layout_constraintStart_toStartOf="@id/btn_dtmf_1"
        app:layout_constraintTop_toBottomOf="@id/btn_dtmf_1"
        android:layout_marginTop="@dimen/in_call_dtmf_key_gap" />

    <TextView
        android:id="@+id/btn_dtmf_5"
        style="@style/DtmfKey"
        android:text="@string/dialer_btn_5"
        app:layout_constraintStart_toEndOf="@id/btn_dtmf_4"
        app:layout_constraintTop_toTopOf="@id/btn_dtmf_4"
        android:layout_marginStart="@dimen/in_call_dtmf_key_gap" />

    <TextView
        android:id="@+id/btn_dtmf_6"
        style="@style/DtmfKey"
        android:text="@string/dialer_btn_6"
        app:layout_constraintStart_toEndOf="@id/btn_dtmf_5"
        app:layout_constraintTop_toTopOf="@id/btn_dtmf_4"
        android:layout_marginStart="@dimen/in_call_dtmf_key_gap" />

    <!-- Row 3: 7, 8, 9 -->
    <TextView
        android:id="@+id/btn_dtmf_7"
        style="@style/DtmfKey"
        android:text="@string/dialer_btn_7"
        app:layout_constraintStart_toStartOf="@id/btn_dtmf_1"
        app:layout_constraintTop_toBottomOf="@id/btn_dtmf_4"
        android:layout_marginTop="@dimen/in_call_dtmf_key_gap" />

    <TextView
        android:id="@+id/btn_dtmf_8"
        style="@style/DtmfKey"
        android:text="@string/dialer_btn_8"
        app:layout_constraintStart_toEndOf="@id/btn_dtmf_7"
        app:layout_constraintTop_toTopOf="@id/btn_dtmf_7"
        android:layout_marginStart="@dimen/in_call_dtmf_key_gap" />

    <TextView
        android:id="@+id/btn_dtmf_9"
        style="@style/DtmfKey"
        android:text="@string/dialer_btn_9"
        app:layout_constraintStart_toEndOf="@id/btn_dtmf_8"
        app:layout_constraintTop_toTopOf="@id/btn_dtmf_7"
        android:layout_marginStart="@dimen/in_call_dtmf_key_gap" />

    <!-- Row 4: *, 0, # -->
    <TextView
        android:id="@+id/btn_dtmf_star"
        style="@style/DtmfKey"
        android:text="@string/dialer_btn_star"
        app:layout_constraintStart_toStartOf="@id/btn_dtmf_1"
        app:layout_constraintTop_toBottomOf="@id/btn_dtmf_7"
        android:layout_marginTop="@dimen/in_call_dtmf_key_gap" />

    <TextView
        android:id="@+id/btn_dtmf_0"
        style="@style/DtmfKey"
        android:text="@string/dialer_btn_0"
        app:layout_constraintStart_toEndOf="@id/btn_dtmf_star"
        app:layout_constraintTop_toTopOf="@id/btn_dtmf_star"
        android:layout_marginStart="@dimen/in_call_dtmf_key_gap" />

    <TextView
        android:id="@+id/btn_dtmf_hash"
        style="@style/DtmfKey"
        android:text="@string/dialer_btn_hash"
        app:layout_constraintStart_toEndOf="@id/btn_dtmf_0"
        app:layout_constraintTop_toTopOf="@id/btn_dtmf_star"
        android:layout_marginStart="@dimen/in_call_dtmf_key_gap" />

</androidx.constraintlayout.widget.ConstraintLayout>
