<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/bt_card_width"
    android:layout_height="@dimen/bt_card_height"
    android:background="@drawable/bt_add_list_bg"
    android:contentDescription="@string/bt_disconnected_card_desc">

    <ImageView
        android:id="@+id/iv_bt_add_icon"
        android:layout_width="@dimen/bt_card_add_icon_size"
        android:layout_height="@dimen/bt_card_add_icon_size"
        android:layout_marginStart="@dimen/bt_card_add_icon_margin_start"
        android:contentDescription="@string/bt_disconnected_add_icon_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/music_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bt_add_device"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bt_card_text_margin_start"
        android:text="@string/bt_disconnected_add_device"
        android:textColor="@color/dark_primary_text"
        android:textSize="@dimen/bt_card_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_bt_device_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_bt_device_icon"
        android:layout_width="@dimen/bt_card_device_icon_size"
        android:layout_height="@dimen/bt_card_device_icon_size"
        android:contentDescription="@string/bt_disconnected_device_icon_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/carsetting_icon_sj_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
